[gd_scene load_steps=6 format=3 uid="uid://bm0i5pnrue2pc"]

[ext_resource type="Script" path="res://Casilla.gd" id="1_pva6i"]
[ext_resource type="Texture2D" uid="uid://beow3wg5sfty6" path="res://Sprites/Casilla1.png" id="2_jpend"]
[ext_resource type="Texture2D" uid="uid://csfw1a80mm8yu" path="res://Sprites/this1.png" id="3_261uv"]
[ext_resource type="Texture2D" uid="uid://guy3rf7wvqn2" path="res://Sprites/move1.png" id="4_s4s7m"]
[ext_resource type="Texture2D" uid="uid://cy64dmjqdh5c7" path="res://Sprites/attack1.png" id="5_fs877"]

[node name="Casilla" type="Node2D"]
script = ExtResource("1_pva6i")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(67, 67)
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_jpend")
flip_h = true

[node name="posicionIni" type="Sprite2D" parent="Fondo"]
visible = false
texture = ExtResource("3_261uv")

[node name="posibleMov" type="Sprite2D" parent="Fondo"]
visible = false
texture = ExtResource("4_s4s7m")

[node name="posibleAttack" type="Sprite2D" parent="Fondo"]
visible = false
texture = ExtResource("5_fs877")

[connection signal="script_changed" from="." to="." method="_on_script_changed"]
